java 17, docs, package rename from com.plaid to com.td, and other general cleanup in preparation for open sourcing.